--- a/TwitterClient/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/TwitterClient/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1Fh-Rb-7Wh">
-    <device id="retina3_5" orientation="portrait">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,49 +18,58 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="39" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PIW-SF-gUx">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="39" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PIW-SF-gUx">
                                 <rect key="frame" x="0.0" y="20" width="320" height="460"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="Ozg-qe-yVf">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Timeline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgc-va-khj">
-                                            <rect key="frame" x="92.5" y="10.5" width="135.5" height="24"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
-                                    <constraints>
-                                        <constraint firstItem="Xgc-va-khj" firstAttribute="centerY" secondItem="Ozg-qe-yVf" secondAttribute="centerY" id="I8O-q3-hkd"/>
-                                        <constraint firstItem="Xgc-va-khj" firstAttribute="centerX" secondItem="Ozg-qe-yVf" secondAttribute="centerX" id="VIL-yC-qUI"/>
-                                    </constraints>
-                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="39" id="qEV-hP-XGj" customClass="TweetCellViewController" customModule="TwitterClient" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="72" width="320" height="39"/>
+                                        <rect key="frame" x="0.0" y="28" width="320" height="39"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qEV-hP-XGj" id="6J0-TT-3o8">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="38"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="92I-Un-Zs8">
+                                                    <rect key="frame" x="8" y="8" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="92I-Un-Zs8" firstAttribute="top" secondItem="6J0-TT-3o8" secondAttribute="top" constant="8" id="DXi-Fe-HGC"/>
+                                                <constraint firstAttribute="bottom" secondItem="92I-Un-Zs8" secondAttribute="bottom" constant="8" id="ihf-Iw-qzb"/>
+                                                <constraint firstAttribute="trailing" secondItem="92I-Un-Zs8" secondAttribute="trailing" constant="8" id="nAU-m1-SyD"/>
+                                                <constraint firstItem="92I-Un-Zs8" firstAttribute="leading" secondItem="6J0-TT-3o8" secondAttribute="leading" constant="8" id="yAB-29-YOF"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="EwQ-42-c4d" kind="show" id="Ldp-Wi-18f"/>
+                                            <outlet property="tweetText" destination="92I-Un-Zs8" id="DaD-vE-UJP"/>
+                                            <segue destination="EwQ-42-c4d" kind="show" identifier="showDetailSegue" id="Ldp-Wi-18f"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="LnV-wu-Mle">
+                                <rect key="frame" x="0.0" y="230" width="320" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="PIW-SF-gUx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Dag-I9-DUa"/>
+                            <constraint firstAttribute="trailing" secondItem="PIW-SF-gUx" secondAttribute="trailing" id="TwC-pq-BEa"/>
+                            <constraint firstItem="PIW-SF-gUx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="hke-gY-6TW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="PIW-SF-gUx" secondAttribute="bottom" id="oXG-0M-BbZ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xgP-FT-Scj"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="LnV-wu-Mle" id="LYg-W7-l1X"/>
                         <outlet property="tableView" destination="PIW-SF-gUx" id="D8e-gp-HBY"/>
                     </connections>
                 </viewController>
@@ -68,23 +77,39 @@
             </objects>
             <point key="canvasLocation" x="1136.25" y="132.5"/>
         </scene>
-        <!--View Controller-->
+        <!--Tweet Detail View Controller-->
         <scene sceneID="Hgj-WZ-jzP">
             <objects>
-                <viewController id="EwQ-42-c4d" sceneMemberID="viewController">
+                <viewController id="EwQ-42-c4d" customClass="TweetDetailViewController" customModule="TwitterClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="45q-DL-aJA"/>
                         <viewControllerLayoutGuide type="bottom" id="Vg2-A4-7HU"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Yy3-wf-0dW">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x56-Ze-JcU">
+                                <rect key="frame" x="8" y="72" width="752" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="x56-Ze-JcU" firstAttribute="leading" secondItem="Yy3-wf-0dW" secondAttribute="leading" constant="8" id="3SZ-0V-2f7"/>
+                            <constraint firstItem="x56-Ze-JcU" firstAttribute="top" secondItem="45q-DL-aJA" secondAttribute="bottom" constant="8" id="EP3-Py-Efl"/>
+                            <constraint firstAttribute="trailing" secondItem="x56-Ze-JcU" secondAttribute="trailing" constant="8" id="fGb-7d-Chu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="detailTweet" destination="x56-Ze-JcU" id="8Ns-78-gjp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wju-71-S8p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2008" y="105"/>
+            <point key="canvasLocation" x="2006.25" y="105"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uJX-DC-5Sf">
