--- a/TwitterClient/TwitterClient/Base.lproj/Main.storyboard
+++ b/TwitterClient/TwitterClient/Base.lproj/Main.storyboard
@@ -22,19 +22,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="39" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PIW-SF-gUx">
-                                <rect key="frame" x="0.0" y="20" width="320" height="480"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="48" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PIW-SF-gUx">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="3KP-2g-IgX">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="159"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vau-63-RFl">
+                                            <rect key="frame" x="40" y="15" width="240" height="128"/>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="Vau-63-RFl" firstAttribute="leading" secondItem="3KP-2g-IgX" secondAttribute="leading" constant="40" id="Cny-oc-MKk"/>
+                                        <constraint firstAttribute="bottom" secondItem="Vau-63-RFl" secondAttribute="bottom" constant="16" id="QcJ-U3-qoi"/>
+                                        <constraint firstItem="Vau-63-RFl" firstAttribute="top" secondItem="3KP-2g-IgX" secondAttribute="top" constant="15" id="dfK-hL-kAL"/>
+                                        <constraint firstAttribute="trailing" secondItem="Vau-63-RFl" secondAttribute="trailing" constant="40" id="sxc-Vr-pLX"/>
+                                    </constraints>
+                                </view>
                                 <activityIndicatorView key="tableFooterView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" id="LnV-wu-Mle">
-                                    <rect key="frame" x="0.0" y="67" width="320" height="20"/>
+                                    <rect key="frame" x="0.0" y="235" width="320" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 </activityIndicatorView>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="39" id="qEV-hP-XGj" customClass="TweetCellViewController" customModule="TwitterClient" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="39"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="48" id="qEV-hP-XGj" customClass="TweetCellViewController" customModule="TwitterClient" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="187" width="320" height="48"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qEV-hP-XGj" id="6J0-TT-3o8">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="38.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="47"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="92I-Un-Zs8">
@@ -43,26 +59,16 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tNo-2Z-XdT">
-                                                    <rect key="frame" x="3" y="0.0" width="66" height="20"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstItem="92I-Un-Zs8" firstAttribute="top" secondItem="6J0-TT-3o8" secondAttribute="top" constant="8" id="DXi-Fe-HGC"/>
-                                                <constraint firstItem="tNo-2Z-XdT" firstAttribute="top" secondItem="6J0-TT-3o8" secondAttribute="top" id="d1T-4N-6El"/>
-                                                <constraint firstItem="tNo-2Z-XdT" firstAttribute="leading" secondItem="6J0-TT-3o8" secondAttribute="leading" constant="3" id="eZm-Wb-RmG"/>
                                                 <constraint firstAttribute="bottom" secondItem="92I-Un-Zs8" secondAttribute="bottom" constant="8" id="ihf-Iw-qzb"/>
                                                 <constraint firstAttribute="trailing" secondItem="92I-Un-Zs8" secondAttribute="trailing" constant="8" id="nAU-m1-SyD"/>
-                                                <constraint firstAttribute="trailing" secondItem="tNo-2Z-XdT" secondAttribute="trailing" constant="13" id="t6X-Bx-OfW"/>
                                                 <constraint firstItem="92I-Un-Zs8" firstAttribute="leading" secondItem="6J0-TT-3o8" secondAttribute="leading" constant="8" id="yAB-29-YOF"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="authorName" destination="tNo-2Z-XdT" id="GVS-BY-VFD"/>
                                             <outlet property="tweetText" destination="92I-Un-Zs8" id="DaD-vE-UJP"/>
                                             <segue destination="EwQ-42-c4d" kind="show" identifier="showDetailSegue" id="Ldp-Wi-18f"/>
                                         </connections>
@@ -72,10 +78,10 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="PIW-SF-gUx" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="0oq-AE-Bl2"/>
-                            <constraint firstItem="PIW-SF-gUx" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="adA-HM-Vmj"/>
-                            <constraint firstItem="PIW-SF-gUx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="eAn-6e-WvA"/>
-                            <constraint firstItem="PIW-SF-gUx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="uHN-Fn-CPN"/>
+                            <constraint firstAttribute="trailing" secondItem="PIW-SF-gUx" secondAttribute="trailing" id="3r9-oY-XlL"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="PIW-SF-gUx" secondAttribute="bottom" id="c28-Tc-emM"/>
+                            <constraint firstItem="PIW-SF-gUx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gGn-VU-zs1"/>
+                            <constraint firstItem="PIW-SF-gUx" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="riR-dR-IZ9"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xgP-FT-Scj">
@@ -92,7 +98,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1136.25" y="132.5"/>
+            <point key="canvasLocation" x="1136.25" y="131.25"/>
         </scene>
         <!--Tweet Detail View Controller-->
         <scene sceneID="Hgj-WZ-jzP">
