--- a/TwitterClient/TwitterClient/Base.lproj/LaunchScreen.storyboard
+++ b/TwitterClient/TwitterClient/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina3_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,32 +18,28 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mo' Money, Mo' Problems" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2GT-Dr-nh7">
-                                <rect key="frame" x="134" y="230" width="52" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="52" id="fMa-Gb-8se"/>
-                                    <constraint firstAttribute="height" constant="21" id="v8k-7Q-7Dd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Twitter_Logo_White_On_Image" translatesAutoresizingMaskIntoConstraints="NO" id="sXc-IN-nFD">
+                                <rect key="frame" x="103" y="186" width="133" height="133"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.19215686274509802" green="0.56862745098039214" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="2GT-Dr-nh7" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ILV-2g-TSx"/>
-                            <constraint firstItem="2GT-Dr-nh7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="IXc-Ez-WQ6"/>
-                            <constraint firstItem="2GT-Dr-nh7" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="P0g-AT-H3k"/>
-                            <constraint firstItem="2GT-Dr-nh7" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="adi-Jl-HiD"/>
+                            <constraint firstItem="sXc-IN-nFD" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="DKz-Cu-wBC"/>
+                            <constraint firstAttribute="trailing" secondItem="sXc-IN-nFD" secondAttribute="trailing" id="FTY-tG-Mih"/>
+                            <constraint firstItem="sXc-IN-nFD" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="Uhf-gL-nuh"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="sXc-IN-nFD" secondAttribute="bottom" id="VMC-vx-PUu"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.5" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Twitter_Logo_White_On_Image" width="133" height="133"/>
+    </resources>
 </document>
