--- a/TwitterClient/TwitterClient/Base.lproj/LaunchScreen.storyboard
+++ b/TwitterClient/TwitterClient/Base.lproj/LaunchScreen.storyboard
@@ -21,20 +21,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Twitter_Logo_White_On_Image" translatesAutoresizingMaskIntoConstraints="NO" id="sXc-IN-nFD">
-                                <rect key="frame" x="103" y="186" width="133" height="133"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Twitter_Logo_White_On_Image" translatesAutoresizingMaskIntoConstraints="NO" id="sXc-IN-nFD">
+                                <rect key="frame" x="94" y="218" width="133" height="133"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="133" id="AYF-Re-aZK"/>
-                                    <constraint firstAttribute="height" constant="133" id="D9N-0B-h51"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="95" id="HPX-ie-MMV"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="95" id="ata-ue-95s"/>
+                                    <constraint firstAttribute="width" constant="133" id="hiQ-Rh-2JA"/>
+                                    <constraint firstAttribute="height" constant="133" id="mKZ-Df-q0t"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.19215686274509802" green="0.56862745098039214" blue="0.46666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="sXc-IN-nFD" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="DKz-Cu-wBC"/>
-                            <constraint firstAttribute="trailing" secondItem="sXc-IN-nFD" secondAttribute="trailing" id="FTY-tG-Mih"/>
-                            <constraint firstItem="sXc-IN-nFD" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="Uhf-gL-nuh"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="sXc-IN-nFD" secondAttribute="bottom" id="VMC-vx-PUu"/>
+                            <constraint firstItem="sXc-IN-nFD" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="94" id="3kn-Lh-xmq"/>
+                            <constraint firstAttribute="trailing" secondItem="sXc-IN-nFD" secondAttribute="trailing" constant="93" id="vLG-xS-IbU"/>
+                            <constraint firstItem="sXc-IN-nFD" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="198" id="zfW-rj-Dhq"/>
                         </constraints>
                     </view>
                 </viewController>
